collections: fix dialog scrollbar

--- a/src/app/shared/forms/planet-tag-input-dialog.scss
+++ b/src/app/shared/forms/planet-tag-input-dialog.scss
@@ -4,7 +4,6 @@
 
   mat-dialog-content {
     overflow-y: auto;
-    max-height: calc(100vh - 156px);
     box-sizing: border-box;
     padding-bottom: 16px;
   }
